--- a/k8s_manifests/eks_config.yaml
+++ b/k8s_manifests/eks_config.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
@@ -18,3 +17,6 @@ managedNodeGroups:
     enableSsm: true
   iam:
     instanceRoleARN: arn:aws:iam::[YOUR AWS ACCOUNT]:role/LabRole
+
+metadata:
+  name: final
