--- a/k8s_manifests/eks_config.yaml
+++ b/k8s_manifests/eks_config.yaml
@@ -8,7 +8,7 @@ metadata:
 
 availabilityZones: ["us-east-1a" ,"us-east-1b" ,"us-east-1c"]
 iam:
-  serviceRoleARN: arn:aws:iam::[YOUR AWS ACCOUNT]:role/LabRole
+  serviceRoleARN: arn:aws:iam::579130819361:role/LabRole
 managedNodeGroups:
 - name: nodegroup
   desiredCapacity: 2
@@ -16,7 +16,4 @@ managedNodeGroups:
   ssh:
     enableSsm: true
   iam:
-    instanceRoleARN: arn:aws:iam::[YOUR AWS ACCOUNT]:role/LabRole
-
-metadata:
-  name: final
+    instanceRoleARN: arn:aws:iam::579130819361:role/LabRole
