--- a/k8s_manifests/pvc.yaml
+++ b/k8s_manifests/pvc.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-pvc
+  namespace: final
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
+  storageClassName: gp2
