--- a/k8s_manifests/serviceaccount.yaml
+++ b/k8s_manifests/serviceaccount.yaml
@@ -2,20 +2,5 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: clo835
-  namespace: final
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  namespace: final
-  name: clo835
-subjects:
-- kind: ServiceAccount
-  name: clo835
-  namespace: final
-  apiGroup: ""
-roleRef:
-  kind: Role
-  name: clo835
-  apiGroup: rbac.authorization.k8s.io
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::579130819361:role/LabRole
