--- a/k8s_manifests/mysql-deployment.yaml
+++ b/k8s_manifests/mysql-deployment.yaml
@@ -2,33 +2,56 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: final
+  labels:
+    app: mysql
+
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: mysql
+
   template:
     metadata:
       labels:
         app: mysql
+
     spec:
       containers:
-      - name: mysql
-        image: mysql:latest
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: password
-        - name: MYSQL_DATABASE
-          value: <your_database_name>
-        ports:
-        - containerPort: 3306
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+        - name: database-container
+          image: 061186295720.dkr.ecr.us-east-1.amazonaws.com/docker-prod-containers-database:latest
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: MYSQL_ROOT_PASSWORD
+            - name: MYSQL_DATABASE
+              value: my_database
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: DBUSER
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: DBPWD
+            - name: MYSQL_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: DBHOST
+            - name: MYSQL_PORT
+              value: "3306"
+          ports:
+            - containerPort: 3306
+          volumeMounts:
+            - name: mysql-data
+              mountPath: /var/lib/mysql
+
       volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: data-pvc
+        - name: mysql-data
+          persistentVolumeClaim:
+            claimName: data-pvc
