--- a/k8s_manifests/mysql-deployment.yaml
+++ b/k8s_manifests/mysql-deployment.yaml
@@ -18,8 +18,8 @@ spec:
 
     spec:
       containers:
-        - name: database-container
-          image: 061186295720.dkr.ecr.us-east-1.amazonaws.com/docker-prod-containers-database:latest
+        - name: mysql
+          image: 579130819361.dkr.ecr.us-east-1.amazonaws.com/mysql:latest
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
