--- a/.github/workflows/build_to_ecr.yml
+++ b/.github/workflows/build_to_ecr.yml
@@ -6,7 +6,7 @@ name: Push mysql and webapp images to Amazon ECR
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "Dev" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
